force-app/main/default/objects/Credit_Note__c/fields/Amount_Without_Vat__c.field-meta.xml
<CustomField>
    <fullName>Amount_Without_Vat__c</fullName>
    <formula>TRUNC(Amount__c,2)  -  Vat_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Without Vat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>