force-app/main/default/objects/Credit_Note__c/fields/Applied_Amount_in_Words__c.field-meta.xml
<CustomField>
    <fullName>Applied_Amount_in_Words__c</fullName>
    <label>Applied Amount in Words</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>