force-app/main/default/objects/Credit_Note__c/fields/Approval_Datetime__c.field-meta.xml
<CustomField>
    <fullName>Approval_Datetime__c</fullName>
    <label>Approval Datetime</label>
    <type>DateTime</type>
</CustomField>