force-app/main/default/objects/Credit_Note__c/fields/AR_Invoice__c.field-meta.xml
<CustomField>
    <fullName>AR_Invoice__c</fullName>
    <label>AR_Invoice</label>
    <referenceTo>AR_Invoice__c</referenceTo>
    <relationshipLabel>Credit Notes</relationshipLabel>
    <relationshipName>Credit_Notes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>