force-app/main/default/objects/Credit_Note__c/fields/ARR_Exclusion__c.field-meta.xml
<CustomField>
    <fullName>ARR_Exclusion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ARR Exclusion</label>
    <type>Checkbox</type>
</CustomField>