force-app/main/default/objects/Credit_Note__c/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <formula>Text(Charge_Code__r.Charge_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Type</label>
    <type>Text</type>
</CustomField>