force-app/main/default/objects/Credit_Note__c/fields/Credit_Note_Code__c.field-meta.xml
<CustomField>
    <fullName>Credit_Note_Code__c</fullName>
    <label>Credit Note Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>