force-app/main/default/objects/Credit_Note__c/fields/Customer_Advances_GL__c.field-meta.xml
<CustomField>
    <fullName>Customer_Advances_GL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Advances GL</label>
    <referenceTo>AR_GL_Account__c</referenceTo>
    <relationshipLabel>Credit Notes (Customer Advances GL)</relationshipLabel>
    <relationshipName>Credit_Notes1</relationshipName>
    <type>Lookup</type>
</CustomField>