force-app/main/default/objects/Credit_Note__c/fields/Data_Fix_Notes__c.field-meta.xml
<CustomField>
    <fullName>Data_Fix_Notes__c</fullName>
    <description>Notes to explain Data Fixes</description>
    <inlineHelpText>Notes to explain Data Fixes</inlineHelpText>
    <label>Data Fix Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>