force-app/main/default/objects/Credit_Note__c/fields/EBS_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>EBS_Account_Id__c</fullName>
    <label>EBS Account Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>