force-app/main/default/objects/Credit_Note__c/fields/EBS_Inventory_Id__c.field-meta.xml
<CustomField>
    <fullName>EBS_Inventory_Id__c</fullName>
    <label>EBS Inventory Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>