force-app/main/default/objects/Credit_Note__c/fields/From_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>From_Legal_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Legal Entity</label>
    <referenceTo>AR_Legal_Entity__c</referenceTo>
    <relationshipLabel>Credit Notes</relationshipLabel>
    <relationshipName>Credit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>