force-app/main/default/objects/Credit_Note__c/fields/Generate_Document__c.field-meta.xml
<CustomField>
    <fullName>Generate_Document__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Document</label>
    <type>Checkbox</type>
</CustomField>