force-app/main/default/objects/Credit_Note__c/fields/Invoice_Ref_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Ref_Number__c</fullName>
    <label>Invoice Ref Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>