force-app/main/default/objects/Credit_Note__c/fields/Invoice_Reversed__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Reversed__c</fullName>
    <formula>TEXT(AR_Invoice__r.Status__c) = &apos;Reversed&apos; ||  AR_Invoice__r.Yardi_Reversed__c == true</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Reversed</label>
    <type>Checkbox</type>
</CustomField>