force-app/main/default/objects/Credit_Note__c/fields/Is_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Is_Amount_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Amount Paid</label>
    <type>Checkbox</type>
</CustomField>