force-app/main/default/objects/Credit_Note__c/fields/Is_Auto_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_Auto_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Auto Created</label>
    <type>Checkbox</type>
</CustomField>