force-app/main/default/objects/Credit_Note__c/fields/Is_Billed_Deduction__c.field-meta.xml
<CustomField>
    <fullName>Is_Billed_Deduction__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Billed Deduction</label>
    <type>Checkbox</type>
</CustomField>