force-app/main/default/objects/Credit_Note__c/fields/Is_Created_Open__c.field-meta.xml
<CustomField>
    <fullName>Is_Created_Open__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicated Credit Notes that are initially created as open</inlineHelpText>
    <label>Is Created Open</label>
    <type>Checkbox</type>
</CustomField>