force-app/main/default/objects/Credit_Note__c/fields/Is_Customer_Level__c.field-meta.xml
<CustomField>
    <fullName>Is_Customer_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Customer Level</label>
    <type>Checkbox</type>
</CustomField>