force-app/main/default/objects/Credit_Note__c/fields/Is_EBS_Customer_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Is_EBS_Customer_Deposit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is EBS Customer Deposit?</label>
    <type>Checkbox</type>
</CustomField>