force-app/main/default/objects/Credit_Note__c/fields/Is_Manual__c.field-meta.xml
<CustomField>
    <fullName>Is_Manual__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Manual</label>
    <type>Checkbox</type>
</CustomField>