force-app/main/default/objects/Credit_Note__c/fields/Is_Partial__c.field-meta.xml
<CustomField>
    <fullName>Is_Partial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Partial</label>
    <type>Checkbox</type>
</CustomField>