force-app/main/default/objects/Credit_Note__c/fields/Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount__c</fullName>
    <formula>IF(Is_Historical__c , (Amount__c ) * -1, IF( ISPICKVAL(Approval_Status__c, &apos;Approved&apos;) , Amount__c, 0) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CN Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>