force-app/main/default/objects/Credit_Note__c/fields/To_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>To_Legal_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>To Legal Entity</label>
    <referenceTo>AR_Legal_Entity__c</referenceTo>
    <relationshipLabel>Credit Notes (To Legal Entity)</relationshipLabel>
    <relationshipName>To_Credit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>