force-app/main/default/objects/Credit_Note__c/fields/Trade_Receivables_GL__c.field-meta.xml
<CustomField>
    <fullName>Trade_Receivables_GL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trade Receivables GL</label>
    <referenceTo>AR_GL_Account__c</referenceTo>
    <relationshipLabel>Credit Notes</relationshipLabel>
    <relationshipName>Credit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>