force-app/main/default/objects/Credit_Note__c/fields/Updated_for_Data_Fixes__c.field-meta.xml
<CustomField>
    <fullName>Updated_for_Data_Fixes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag will be checked on records Updated for Data Fixes</description>
    <inlineHelpText>Flag will be checked on records Updated for Data Fixes</inlineHelpText>
    <label>Updated for Data Fixes</label>
    <type>Checkbox</type>
</CustomField>