force-app/main/default/objects/Credit_Note__c/fields/Vat__c.field-meta.xml
<CustomField>
    <fullName>Vat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vat</label>
    <referenceTo>VAT__c</referenceTo>
    <relationshipLabel>Credit Notes</relationshipLabel>
    <relationshipName>Credit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>