force-app/main/default/objects/Credit_Note__c/fields/Yardi_Id__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Id__c</fullName>
    <externalId>true</externalId>
    <label>Yardi Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>