force-app/main/default/objects/Credit_Note__c/fields/Yardi_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Total_Amount__c</fullName>
    <label>Yardi Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>