force-app/main/default/objects/Credit_Note__c/fields/Yardi_Total_CN_Amount_for_Reference__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Total_CN_Amount_for_Reference__c</fullName>
    <label>Yardi Total CN Amount for Reference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>