force-app/main/default/objects/Credit_Note__c/fields/Yardi_Un_Applied_amount__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Un_Applied_amount__c</fullName>
    <formula>IF( Is_Historical__c , Yardi_Total_Amount__c -  Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yardi Un Applied amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>