force-app/main/default/objects/Credit_Note__c/fields/Yardi_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>Yardi_Unit_Code__c</fullName>
    <label>Yardi Unit Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>