force-app/main/default/objects/Credit_Note__c/fields/YNI_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>YNI_Bank_Account__c</fullName>
    <label>YNI Bank Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>