force-app/main/default/objects/Credit_Note__c/fields/YNI_Count_of_Un_Applied__c.field-meta.xml
<CustomField>
    <fullName>YNI_Count_of_Un_Applied__c</fullName>
    <label>YNI Count of Un Applied</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>