force-app/main/default/objects/Credit_Note__c/fields/YNI_Installment_Date__c.field-meta.xml
<CustomField>
    <fullName>YNI_Installment_Date__c</fullName>
    <label>YNI Installment Date</label>
    <type>Date</type>
</CustomField>