force-app/main/default/objects/Credit_Note__c/fields/YNI_Is_Customer_Level__c.field-meta.xml
<CustomField>
    <fullName>YNI_Is_Customer_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>YNI Is Customer Level</label>
    <type>Checkbox</type>
</CustomField>