force-app/main/default/objects/Credit_Note__c/fields/YNI_Joint_Owners__c.field-meta.xml
<CustomField>
    <fullName>YNI_Joint_Owners__c</fullName>
    <label>YNI Joint Owners</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>