force-app/main/default/objects/Credit_Note__c/fields/YNI_Payment_Plan_Detail__c.field-meta.xml
<CustomField>
    <fullName>YNI_Payment_Plan_Detail__c</fullName>
    <label>YNI Payment Plan Detail</label>
    <length>50</length>
    <type>Text</type>
</CustomField>