force-app/main/default/objects/Credit_Note__c/fields/YNI_Re_Applied_Amount__c.field-meta.xml
<CustomField>
    <fullName>YNI_Re_Applied_Amount__c</fullName>
    <label>YNI Re Applied Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>