force-app/main/default/objects/Credit_Note__c/fields/YNI_Reversed__c.field-meta.xml
<CustomField>
    <fullName>YNI_Reversed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>YNI Reversed</label>
    <type>Checkbox</type>
</CustomField>