force-app/main/default/objects/Credit_Note__c/fields/YNI_Run_GL_Update__c.field-meta.xml
<CustomField>
    <fullName>YNI_Run_GL_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>YNI Run GL Update</label>
    <type>Checkbox</type>
</CustomField>