force-app/main/default/objects/Credit_Note__c/fields/YNI_Status__c.field-meta.xml
<CustomField>
    <fullName>YNI_Status__c</fullName>
    <label>YNI Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>