force-app/main/default/objects/Credit_Note__c/fields/YNI_Sub_GL_Account__c.field-meta.xml
<CustomField>
    <fullName>YNI_Sub_GL_Account__c</fullName>
    <label>YNI Sub GL Account</label>
    <length>10</length>
    <type>Text</type>
</CustomField>