force-app/main/default/objects/Credit_Note__c/fields/YNI_Tax_Invoice_Generated__c.field-meta.xml
<CustomField>
    <fullName>YNI_Tax_Invoice_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>YNI Tax Invoice Generated</label>
    <type>Checkbox</type>
</CustomField>