force-app/main/default/objects/Credit_Note__c/fields/YNI_VAT_Amount_Type__c.field-meta.xml
<CustomField>
    <fullName>YNI_VAT_Amount_Type__c</fullName>
    <label>YNI VAT Amount Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>