force-app/main/default/objects/Credit_Note__c/fields/YNI_VAT_Interface__c.field-meta.xml
<CustomField>
    <fullName>YNI_VAT_Interface__c</fullName>
    <defaultValue>false</defaultValue>
    <label>YNI VAT Interface</label>
    <type>Checkbox</type>
</CustomField>