force-app/main/default/objects/Credit_Note__c/fields/YNI_Yardi_GL_ACCT__c.field-meta.xml
<CustomField>
    <fullName>YNI_Yardi_GL_ACCT__c</fullName>
    <label>YNI Yardi GL ACCT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>